syntax = "proto3";

option csharp_namespace = "Protos.User";

import "user.proto";

service UserServiceProto {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  // for auth service
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc VerifyUserEmail(VerifyUserEmailRequest) returns (VerifyUserEmailResponse);
  rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (UpdateUserPasswordResponse);
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  UserProto data = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  optional UserProto data = 1;
  string password_hash = 2;
  // bool is_email_verified = 3;
  
}

message VerifyUserEmailRequest {
  string user_id = 1;
}

message VerifyUserEmailResponse {
  bool success = 1;
}

message UpdateUserPasswordRequest {
  string user_id = 1;
  string new_password_hash = 2;
}

message UpdateUserPasswordResponse {
  bool success = 1;
  string message = 2;
}

// @think: maybe add getAllUsers
// @todo: block user (change userStatus)
// @todo: update password (change only password)

message CreateUserRequest {
  string full_name = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
  // optional DeliveryInfoProto delivery_info = 5;
}

message CreateUserResponse {
  optional UserProto data = 1;
}

message UpdateUserRequest {
  string full_name = 1;
  string email = 2;
  string phone = 3;
  //  optional DeliveryInfoProto delivery_info = 4;
}

message UpdateUserResponse {
  UserProto data = 1;
}

message DeleteUserRequest {
  string id = 1;
}
message DeleteUserResponse {}